# youtube-downloader

./: main.py  pyproject.toml  setup.cfg
pre-commit/: db.db
src/ytdownload/: __main__.py  _version.py
