[metadata]
name = ytdownload
description = Download music from youtube
long_description = file: README.md
long_description_content_type = text/markdown
url = https://bbgithub.dev.bloomberg.com/circeanubogdan/youtube-download
maintainer = Circeanu Bogdan
maintainer_email = circeanubogdan@gmail.com
license = Apache-2.0
platforms = unix, linux, osx, win32
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find_namespace:
install_requires =
    click
python_requires = >=3.9
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[sdist]
formats = gztar